fixed white space

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,9 @@ body{
     background:#F7F7F9;
     margin: 0;
     padding: 0;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
+    overflow-x: hidden;
 }
 /*Header*/
 .header {
